--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Homemade+Apple&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Sunflower:wght@300;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap');
 
 * { box-sizing: border-box; }
 html, body, div, span, object, iframe,
@@ -98,6 +99,22 @@ input:focus {
 }
 
 *::-webkit-scrollbar { display: none;}
+.t-content::-webkit-scrollbar {
+  width: 10px;
+  display: block;
+}
+.t-content::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+.t-content::-webkit-scrollbar-thumb {
+	border-radius: 20px;
+  width: auto;
+  background-color: #8d8d8d1e;
+}
+.t-content::-webkit-scrollbar-button {
+  width: 0;
+  height: 0;
+}
 
 /* loading */
 .loading-container {
