--- a/jenniferSoft/css/common.css
+++ b/jenniferSoft/css/common.css
@@ -245,24 +245,28 @@ header {transition: all ease 0.5s;  }
 	position: relative;
 	overflow: hidden;
 }
-.visual_photo{border: 1px solid red; height: 100%;}
-/* .visual_photo > ul > li > img {
-	
-	top:0;
-	left:50%;
-	transform: translateX(-50%);
+
+.visual_photo,
+.bx-wrapper,
+.bx-viewport,
+.visual_photo_inner,
+.visual_photo_inner > li{
+	height: 100% !important;
+}
+
+.visual_photo_inner li .m-bg {
 	width: 100%;
-	} */
+	height: 100%;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
 div.bx-wrapper {
 	border: none;
 	box-shadow: none;
-
 }
-div.bx-wrapper img {
-	max-width: 100%;
-	height: auto;
 
-}
 .visual_bgc { 
 	top:0; right:0; bottom:0; left:0;
 	position: absolute;
